# fast_api_faker

./: README.md  pyproject.toml
src/: start.py
src/data/: products.csv
src/static/css/: style.css
src/templates/: index.html  layout.html
